# langflow-blueprints.archetype

./: .gitignore  README.md  archetype.rhai  archetype.yaml
.claude/: AI_SYNC_GUIDE.md  settings.local.json
.github/workflows/: render.yaml
contents/{{ project-name }}/: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
contents/{{ project-name }}/components/data_loaders/: AzureBlobLoader.py
contents/{{ project-name }}/components/vectorstores/: YborQdrant.py
contents/{{ project-name }}/flows/: LLMRouting.json  MainFlow.json
contents/{{ project-name }}/tests/: __init__.py  test_azure_blob_loader.py  test_ybor_qdrant.py
