[project]
name = "langflow-custom-components"
version = "0.1.0"
description = "Custom Langflow components for Azure Blob Storage and Qdrant vector store"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    # Langflow core dependencies
    "langflow>=1.0.0",

    # LangChain dependencies
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-qdrant>=0.1.0",

    # Vector store dependencies
    "qdrant-client>=1.7.0",

    # Azure dependencies
    "azure-storage-blob>=12.19.0",

    # Data validation
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "ruff>=0.1.0", "mypy>=1.7.0", "black>=24.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["components"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=24.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
    "B904", # raise from exception
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # imported but unused

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=components --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
